fix: code cleanup (#17)
* fix: add final modifiers

* fix: unnecessary this

* fix: weaken types

* feat: automated idea code cleanup productive code

* feat: code cleanup test code